# analyzer

./: .gitignore  CMakeLists.txt  README.md  config.h.in  idfa.h.in  install.sh
.github/workflows/: blank.yml
MathFunctions/: CMakeLists.txt
MathFunctions/include/: MathFunctions.h
MathFunctions/src/: CMakeLists.txt  sqrt.cpp
docs/: Doxyfile
examples/: CMakeLists.txt  t1.cpp  tiling.cpp
include/: AbstractBoundedFlowSet.h  AbstractFlowAnalysis.h  AbstractFlowSet.h  ArrayPackedSet.h  ArraySparseSet.h  ArrayValueUniverse.h  BackwardFlowAnalysis.h  Base.h  BoundedFlowSet.h  Derived.h  FlowAnalysis.h  FlowSet.h  ForwardFlowAnalysis.h  FunctionCFG.h  Iterable.h  IterableList.h  NodeData.h  ObjectIntMapper.h  ValueUniverse.h  Variable.h  analyzer.h  framework.h  idfa.h
passes/: CMakeLists.txt
passes/liveness_analysis/: CMakeLists.txt  la.cpp
passes/test_pass/: CMakeLists.txt  pass1.cpp
src/: ABoundedSet  AbSet  AbstractBoundedFlowSet  AbstractBoundedFlowSet.cpp  AbstractFlowAnalysis  AbstractFlowAnalysis.cpp  AbstractFlowSet  AbstractFlowSet.cpp  ArrayPackedSet  ArrayPackedSet.cpp  ArraySparseSet  ArraySparseSet.cpp  ArrayValueUniverse.cpp  BackwardAnalysis  BackwardFlowAnalysis  BackwardFlowAnalysis.cpp  Base.cpp  BiMap  BoundedFlowSet  BoundedSet  CMakeLists.txt  Derived.cpp  FlowAnalysis  FlowAnalysis.cpp  FlowSet  FlowSet.cpp  ForwardAnalysis  ForwardFlowAnalysis  ForwardFlowAnalysis.cpp  FunctionCFG  FunctionCFG.cpp  G  IAnalysis  IBoundedSet  ISet  IterableList.cpp  NodeData  NodeData.cpp  ObjectIntMapper  ObjectIntMapper.cpp  (+6 more)
tests/: CMakeLists.txt  pass1.cpp
